--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # Compiled class file
 *.class
 
+# Gradle files
+.gradle/
+/build/
+gradle-app.setting
+!gradle-wrapper.jar # Don't ignore the Gradle wrapper JAR
+
 # Log file
 *.log
 
